@@ -2,6 +2,10 @@ package com.objectcomputing.checkins.services.role;
 
 
 import com.fasterxml.jackson.databind.JsonNode;
+import com.objectcomputing.checkins.services.TestContainersSuite;
+import com.objectcomputing.checkins.services.fixture.MemberProfileFixture;
+import com.objectcomputing.checkins.services.fixture.RoleFixture;
+import com.objectcomputing.checkins.services.memberprofile.MemberProfile;
 import io.micronaut.core.type.Argument;
 import io.micronaut.http.HttpRequest;
 import io.micronaut.http.HttpResponse;
@@ -10,55 +14,62 @@ import io.micronaut.http.MutableHttpRequest;
 import io.micronaut.http.client.HttpClient;
 import io.micronaut.http.client.annotation.Client;
 import io.micronaut.http.client.exceptions.HttpClientResponseException;
-import io.micronaut.test.annotation.MicronautTest;
-import io.micronaut.test.annotation.MockBean;
 import org.junit.jupiter.api.Test;
 
 import javax.inject.Inject;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 import static com.objectcomputing.checkins.services.role.RoleType.Constants.ADMIN_ROLE;
 import static com.objectcomputing.checkins.services.role.RoleType.Constants.MEMBER_ROLE;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-@MicronautTest
-class RoleControllerTest {
+class RoleControllerTest extends TestContainersSuite implements MemberProfileFixture, RoleFixture {
 
     @Inject
     @Client("/services/role")
     HttpClient client;
-    @Inject
-    private RoleServices roleServices;
-
-    @MockBean(RoleServices.class)
-    public RoleServices roleServices() {
-        return mock(RoleServices.class);
-    }
 
     @Test
     void testCreateARole() {
+        MemberProfile memberProfile = createADefaultMemberProfile();
+
         RoleCreateDTO roleCreateDTO = new RoleCreateDTO();
         roleCreateDTO.setRole(RoleType.MEMBER);
-        roleCreateDTO.setMemberid(UUID.randomUUID());
-
-        Role r = new Role(roleCreateDTO.getRole(), roleCreateDTO.getMemberid());
-
-        when(roleServices.save(eq(r))).thenReturn(r);
+        roleCreateDTO.setMemberid(memberProfile.getUuid());
 
         final HttpRequest<RoleCreateDTO> request = HttpRequest.POST("", roleCreateDTO)
                 .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<Role> response = client.toBlocking().exchange(request, Role.class);
 
-        assertEquals(r, response.body());
+        Role role = response.body();
+        assertNotNull(role);
+        assertEquals(roleCreateDTO.getMemberid(), role.getMemberid());
+        assertEquals(roleCreateDTO.getRole(), role.getRole());
         assertEquals(HttpStatus.CREATED, response.getStatus());
-        assertEquals(String.format("%s/%s", request.getPath(), r.getId()), response.getHeaders().get("location"));
+        assertEquals(String.format("%s/%s", request.getPath(), role.getId()), response.getHeaders().get("location"));
+    }
 
-        verify(roleServices, times(1)).save(any(Role.class));
+    @Test
+    void testCreateARoleAlreadyExists() {
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role alreadyExistingRole = createDefaultRole(RoleType.MEMBER, memberProfile);
+        RoleCreateDTO roleCreateDTO = new RoleCreateDTO();
+        roleCreateDTO.setRole(alreadyExistingRole.getRole());
+        roleCreateDTO.setMemberid(alreadyExistingRole.getMemberid());
+
+        final HttpRequest<RoleCreateDTO> request = HttpRequest.POST("", roleCreateDTO)
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
+                client.toBlocking().exchange(request, Map.class));
+
+        JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
+        String error = Objects.requireNonNull(body).get("message").asText();
+        String href = Objects.requireNonNull(body).get("_links").get("self").get("href").asText();
+
+        assertEquals(String.format("Member %s already has role %s", roleCreateDTO.getMemberid(), roleCreateDTO.getRole()),
+                error);
+        assertEquals(request.getPath(), href);
     }
 
     @Test
@@ -67,10 +78,6 @@ class RoleControllerTest {
         roleCreateDTO.setRole(RoleType.MEMBER);
         roleCreateDTO.setMemberid(UUID.randomUUID());
 
-        Role r = new Role(roleCreateDTO.getRole(), roleCreateDTO.getMemberid());
-
-        when(roleServices.save(eq(r))).thenReturn(r);
-
         final HttpRequest<RoleCreateDTO> request = HttpRequest.POST("", roleCreateDTO)
                 .basicAuth(MEMBER_ROLE, MEMBER_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
@@ -78,17 +85,11 @@ class RoleControllerTest {
 
         assertEquals(HttpStatus.FORBIDDEN, responseException.getStatus());
         assertEquals("Forbidden", responseException.getMessage());
-
-        verify(roleServices, never()).read(any(UUID.class));
     }
-
 
     @Test
     void testCreateAnInvalidRole() {
         RoleCreateDTO roleCreateDTO = new RoleCreateDTO();
-
-        Role r = new Role(RoleType.MEMBER, UUID.randomUUID());
-        when(roleServices.save(any(Role.class))).thenReturn(r);
 
         final HttpRequest<RoleCreateDTO> request = HttpRequest.POST("", roleCreateDTO)
                 .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
@@ -104,15 +105,30 @@ class RoleControllerTest {
         assertEquals("role.role: must not be null", errorList.get(1));
         assertEquals(request.getPath(), href.asText());
         assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
+    }
 
-        verify(roleServices, never()).save(any(Role.class));
+    @Test
+    void testCreateNonExistingMember() {
+        RoleCreateDTO role = new RoleCreateDTO();
+        role.setMemberid(UUID.randomUUID());
+        role.setRole(RoleType.MEMBER);
+
+
+        final HttpRequest<RoleCreateDTO> request = HttpRequest.POST("", role)
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
+                client.toBlocking().exchange(request, Map.class));
+
+        JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
+        String error = Objects.requireNonNull(body).get("message").asText();
+        String href = Objects.requireNonNull(body).get("_links").get("self").get("href").asText();
+
+        assertEquals(String.format("Member %s doesn't exist", role.getMemberid()), error);
+        assertEquals(request.getPath(), href);
     }
 
     @Test
     void testCreateANullRole() {
-        Role r = new Role(RoleType.MEMBER, UUID.randomUUID());
-        when(roleServices.save(any(Role.class))).thenReturn(r);
-
         final HttpRequest<String> request = HttpRequest.POST("", "")
                 .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class,
@@ -124,42 +140,36 @@ class RoleControllerTest {
         assertEquals("Required Body [role] not specified", errors.asText());
         assertEquals(request.getPath(), href.asText());
         assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
-
-        verify(roleServices, never()).save(any(Role.class));
     }
 
     @Test
     void testLoadRoles() {
+        MemberProfile memberProfile = createADefaultMemberProfile();
+
         RoleCreateDTO roleCreateDTO = new RoleCreateDTO();
         roleCreateDTO.setRole(RoleType.MEMBER);
-        roleCreateDTO.setMemberid(UUID.randomUUID());
+        roleCreateDTO.setMemberid(memberProfile.getUuid());
 
         RoleCreateDTO roleCreateDTO2 = new RoleCreateDTO();
-        roleCreateDTO2.setRole(RoleType.MEMBER);
-        roleCreateDTO2.setMemberid(UUID.randomUUID());
+        roleCreateDTO2.setRole(RoleType.ADMIN);
+        roleCreateDTO2.setMemberid(memberProfile.getUuid());
 
         List<RoleCreateDTO> dtoList = List.of(roleCreateDTO, roleCreateDTO2);
-
-        Role r = new Role(roleCreateDTO.getRole(), roleCreateDTO.getMemberid());
-        Role r2 = new Role(roleCreateDTO2.getRole(), roleCreateDTO2.getMemberid());
-
-        List<Role> roleList = List.of(r, r2);
-        AtomicInteger i = new AtomicInteger(0);
-        doAnswer(a -> {
-            Role thisG = roleList.get(i.getAndAdd(1));
-            assertEquals(thisG, a.getArgument(0));
-            return thisG;
-        }).when(roleServices).save(any(Role.class));
 
         final MutableHttpRequest<List<RoleCreateDTO>> request = HttpRequest.POST("roles", dtoList)
                 .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<List<Role>> response = client.toBlocking().exchange(request, Argument.listOf(Role.class));
 
-        assertEquals(roleList, response.body());
+        List<Role> roles = response.body();
+        assertNotNull(roles);
+        assertEquals(2, roles.size());
+        assertEquals(roleCreateDTO.getMemberid(), roles.get(0).getMemberid());
+        assertEquals(roleCreateDTO.getRole(), roles.get(0).getRole());
+        assertEquals(roleCreateDTO2.getMemberid(), roles.get(1).getMemberid());
+        assertEquals(roleCreateDTO2.getRole(), roles.get(1).getRole());
+
         assertEquals(HttpStatus.CREATED, response.getStatus());
         assertEquals(request.getPath(), response.getHeaders().get("location"));
-
-        verify(roleServices, times(2)).save(any(Role.class));
     }
 
     @Test
@@ -175,8 +185,6 @@ class RoleControllerTest {
 
         assertEquals(HttpStatus.FORBIDDEN, responseException.getStatus());
         assertEquals("Forbidden", responseException.getMessage());
-
-        verify(roleServices, never()).save(any(Role.class));
     }
 
     @Test
@@ -203,184 +211,189 @@ class RoleControllerTest {
         assertEquals("roles.role: must not be null", errorList.get(1));
         assertEquals(request.getPath(), href.asText());
         assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
-
-        verify(roleServices, never()).save(any(Role.class));
-    }
-
-    @Test
-    void testLoadRolesThrowException() {
-        RoleCreateDTO roleCreateDTO = new RoleCreateDTO();
-        roleCreateDTO.setRole(RoleType.MEMBER);
-        roleCreateDTO.setMemberid(UUID.randomUUID());
-
-        RoleCreateDTO roleCreateDTO2 = new RoleCreateDTO();
-        roleCreateDTO2.setRole(RoleType.MEMBER);
-        roleCreateDTO2.setMemberid(UUID.randomUUID());
-
-        List<RoleCreateDTO> dtoList = List.of(roleCreateDTO, roleCreateDTO2);
-
-        Role r = new Role(roleCreateDTO.getRole(), roleCreateDTO.getMemberid());
-        Role r2 = new Role(roleCreateDTO2.getRole(), roleCreateDTO2.getMemberid());
-
-        final String errorMessage = "error message!";
-        when(roleServices.save(eq(r))).thenReturn(r);
-
-        when(roleServices.save(eq(r2))).thenAnswer(a -> {
-            throw new RoleBadArgException(errorMessage);
-        });
-
-        final MutableHttpRequest<List<RoleCreateDTO>> request = HttpRequest.POST("roles", dtoList)
-                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
-                client.toBlocking().exchange(request, String.class));
-
-        assertEquals(String.format("[\"Member %s was not given role %s because: %s\"]",
-                r2.getMemberid(), r2.getRole(), errorMessage), responseException.getResponse().body());
-        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
-        assertEquals(request.getPath(), responseException.getResponse().getHeaders().get("location"));
-
-        verify(roleServices, times(2)).save(any(Role.class));
     }
 
     @Test
     void testReadRole() {
-        Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role role = createDefaultRole(memberProfile);
 
-        when(roleServices.read(eq(r.getId()))).thenReturn(r);
-
-        final MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/%s", r.getId().toString())).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/%s", role.getId())).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<Role> response = client.toBlocking().exchange(request, Role.class);
 
-        assertEquals(r, response.body());
+        assertEquals(role, response.body());
         assertEquals(HttpStatus.OK, response.getStatus());
-
-        verify(roleServices, times(1)).read(any(UUID.class));
     }
 
     @Test
     void testReadForbidden() {
-        Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
-        when(roleServices.read(eq(r.getId()))).thenReturn(r);
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role role = createDefaultRole(memberProfile);
 
-        final MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/%s", r.getId().toString()))
+        final MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/%s", role.getId()))
                 .basicAuth(MEMBER_ROLE, MEMBER_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
                 client.toBlocking().exchange(request, String.class));
 
         assertEquals(HttpStatus.FORBIDDEN, responseException.getStatus());
         assertEquals("Forbidden", responseException.getMessage());
-
-        verify(roleServices, never()).read(any(UUID.class));
     }
 
     @Test
     void testReadRoleNotFound() {
-        Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
-
-        when(roleServices.read(eq(r.getId()))).thenReturn(null);
-
-        final MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/%s", r.getId().toString()))
+        final MutableHttpRequest<Object> request = HttpRequest.GET(String.format("/%s", UUID.randomUUID()))
                 .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () -> client.toBlocking().exchange(request, Role.class));
 
         assertEquals(HttpStatus.NOT_FOUND, responseException.getStatus());
-
-        verify(roleServices, times(1)).read(any(UUID.class));
     }
 
     @Test
     void testFindRoles() {
-        Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
-        Set<Role> roles = Collections.singleton(r);
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Set<Role> roles = Set.of(createDefaultRole(RoleType.ADMIN, memberProfile),
+                createDefaultRole(RoleType.PDL, memberProfile));
 
-        when(roleServices.findByFields(eq(r.getRole()), eq(r.getMemberid()))).thenReturn(roles);
-
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?role=%s&memberid=%s", r.getRole(),
-                r.getMemberid())).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?memberid=%s", memberProfile.getUuid()))
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<Set<Role>> response = client.toBlocking().exchange(request, Argument.setOf(Role.class));
 
         assertEquals(roles, response.body());
         assertEquals(HttpStatus.OK, response.getStatus());
-
-        verify(roleServices, times(1)).findByFields(any(RoleType.class), any(UUID.class));
     }
 
     @Test
     void testFindRolesForbidden() {
-        Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
-        Set<Role> roles = Collections.singleton(r);
-
-        when(roleServices.findByFields(eq(r.getRole()), eq(r.getMemberid()))).thenReturn(roles);
-
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?role=%s&memberid=%s", r.getRole(),
-                r.getMemberid())).basicAuth(MEMBER_ROLE, MEMBER_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?role=%s&memberid=%s", RoleType.ADMIN,
+                UUID.randomUUID())).basicAuth(MEMBER_ROLE, MEMBER_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
                 client.toBlocking().exchange(request, String.class));
 
         assertEquals(HttpStatus.FORBIDDEN, responseException.getStatus());
         assertEquals("Forbidden", responseException.getMessage());
-
-        verify(roleServices, never()).findByFields(any(RoleType.class), any(UUID.class));
     }
 
     @Test
     void testFindRolesAllParams() {
-        Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
-        Set<Role> roles = Collections.singleton(r);
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role role = createDefaultRole(memberProfile);
 
-        when(roleServices.findByFields(eq(r.getRole()), eq(r.getMemberid()))).thenReturn(roles);
-
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?role=%s&memberid=%s", r.getRole(),
-                r.getMemberid())).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?role=%s&memberid=%s", role.getRole(),
+                role.getMemberid())).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<Set<Role>> response = client.toBlocking().exchange(request, Argument.setOf(Role.class));
 
-        assertEquals(roles, response.body());
+        assertEquals(Set.of(role), response.body());
         assertEquals(HttpStatus.OK, response.getStatus());
-
-        verify(roleServices, times(1)).findByFields(any(RoleType.class), any(UUID.class));
     }
-
 
     @Test
-    void testFindRolesNull() {
-        Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
-
-        when(roleServices.findByFields(eq(r.getRole()), eq(null))).thenReturn(null);
-
-        final HttpRequest<?> request = HttpRequest.GET(String.format("/?role=%s", r.getRole()))
+    void testFindRolesDoesNotExist() {
+        final HttpRequest<?> request = HttpRequest.GET(String.format("/?role=%s", RoleType.ADMIN))
                 .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class,
-                () -> client.toBlocking().exchange(request, Argument.setOf(Role.class)));
+        HttpResponse<Set<Role>> response = client.toBlocking().exchange(request, Argument.setOf(Role.class));
 
-        assertEquals(HttpStatus.NOT_FOUND, responseException.getStatus());
-
-        verify(roleServices, times(1)).findByFields(any(RoleType.class), eq(null));
+        assertEquals(HttpStatus.OK, response.getStatus());
+        assertEquals(Set.of(), response.body());
     }
-
 
     @Test
     void testUpdateRole() {
-        Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role role = createDefaultRole(memberProfile);
 
-        when(roleServices.update(eq(r))).thenReturn(r);
-
-        final HttpRequest<Role> request = HttpRequest.PUT("", r)
+        final HttpRequest<Role> request = HttpRequest.PUT("", role)
                 .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<Role> response = client.toBlocking().exchange(request, Role.class);
 
-        assertEquals(r, response.body());
+        assertEquals(role, response.body());
         assertEquals(HttpStatus.OK, response.getStatus());
-        assertEquals(String.format("%s/%s", request.getPath(), r.getId()), response.getHeaders().get("location"));
+        assertEquals(String.format("%s/%s", request.getPath(), role.getId()), response.getHeaders().get("location"));
+    }
 
-        verify(roleServices, times(1)).update(any(Role.class));
+    @Test
+    void testUpdateNonExistingMember() {
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role role = createDefaultRole(memberProfile);
+
+        role.setMemberid(UUID.randomUUID());
+
+        final HttpRequest<Role> request = HttpRequest.PUT("", role)
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
+                client.toBlocking().exchange(request, Map.class));
+
+        JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
+        String error = Objects.requireNonNull(body).get("message").asText();
+        String href = Objects.requireNonNull(body).get("_links").get("self").get("href").asText();
+
+        assertEquals(String.format("Member %s doesn't exist", role.getMemberid()), error);
+        assertEquals(request.getPath(), href);
+    }
+
+    @Test
+    void testUpdateNonExistingRoleType() {
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role roleToUpdate = createDefaultRole(memberProfile);
+
+        Map<String, String> role = new HashMap<>();
+        role.put("id", roleToUpdate.getId().toString());
+        role.put("role", "ROLE_DOES_NOT_EXIST");
+        role.put("memberid", roleToUpdate.getMemberid().toString());
+
+        final HttpRequest<Map<String, String>> request = HttpRequest.PUT("", role)
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
+                client.toBlocking().exchange(request, Map.class));
+
+        JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
+        String error = Objects.requireNonNull(body).get("message").asText();
+        String href = Objects.requireNonNull(body).get("_links").get("self").get("href").asText();
+
+        assertTrue(error.contains("not one of the values accepted for Enum class"));
+        assertEquals(request.getPath(), href);
+    }
+
+    @Test
+    void testUpdateNonExistingRole() {
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role role = new Role(UUID.randomUUID(), RoleType.MEMBER, memberProfile.getUuid());
+
+        final HttpRequest<Role> request = HttpRequest.PUT("", role)
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
+                client.toBlocking().exchange(request, Map.class));
+
+        JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
+        String error = Objects.requireNonNull(body).get("message").asText();
+        String href = Objects.requireNonNull(body).get("_links").get("self").get("href").asText();
+
+        assertEquals(String.format("Unable to locate role to update with id %s", role.getId()), error);
+        assertEquals(request.getPath(), href);
+    }
+
+    @Test
+    void testUpdateWithoutId() {
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role role = createDefaultRole(RoleType.MEMBER, memberProfile);
+        role.setId(null);
+
+        final HttpRequest<Role> request = HttpRequest.PUT("", role)
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
+                client.toBlocking().exchange(request, Map.class));
+
+        JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
+        String error = Objects.requireNonNull(body).get("message").asText();
+        String href = Objects.requireNonNull(body).get("_links").get("self").get("href").asText();
+
+        assertEquals("Unable to locate role to update with id null", error);
+        assertEquals(request.getPath(), href);
     }
 
     @Test
     void testUpdateForbidden() {
         Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
 
-        when(roleServices.update(eq(r))).thenReturn(r);
-
         final HttpRequest<Role> request = HttpRequest.PUT("", r)
                 .basicAuth(MEMBER_ROLE, MEMBER_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
@@ -388,17 +401,16 @@ class RoleControllerTest {
 
         assertEquals(HttpStatus.FORBIDDEN, responseException.getStatus());
         assertEquals("Forbidden", responseException.getMessage());
-
-        verify(roleServices, never()).update(any(Role.class));
     }
 
     @Test
     void testUpdateAnInvalidRole() {
-        Role r = new Role(UUID.randomUUID(), null, null);
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role role = createDefaultRole(memberProfile);
+        role.setMemberid(null);
+        role.setRole(null);
 
-        when(roleServices.update(any(Role.class))).thenReturn(r);
-
-        final HttpRequest<Role> request = HttpRequest.PUT("", r)
+        final HttpRequest<Role> request = HttpRequest.PUT("", role)
                 .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class,
                 () -> client.toBlocking().exchange(request, Map.class));
@@ -412,81 +424,72 @@ class RoleControllerTest {
         assertEquals("role.role: must not be null", errorList.get(1));
         assertEquals(request.getPath(), href.asText());
         assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
-
-        verify(roleServices, never()).update(any(Role.class));
     }
 
     @Test
     void testUpdateANullRole() {
-        Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
-        when(roleServices.update(any(Role.class))).thenReturn(r);
-
         final HttpRequest<String> request = HttpRequest.PUT("", "")
                 .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class,
                 () -> client.toBlocking().exchange(request, Map.class));
 
         JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
-        JsonNode errors = Objects.requireNonNull(body).get("message");
-        JsonNode href = Objects.requireNonNull(body).get("_links").get("self").get("href");
-        assertEquals("Required Body [role] not specified", errors.asText());
-        assertEquals(request.getPath(), href.asText());
+        String errors = Objects.requireNonNull(body).get("message").asText();
+        String href = Objects.requireNonNull(body).get("_links").get("self").get("href").asText();
+        assertEquals("Required Body [role] not specified", errors);
+        assertEquals(request.getPath(), href);
         assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
-
-        verify(roleServices, never()).update(any(Role.class));
-    }
-
-
-    @Test
-    void testUpdateRoleThrowException() {
-        Role r = new Role(UUID.randomUUID(), RoleType.ADMIN, UUID.randomUUID());
-
-        final String errorMessage = "error message!";
-
-        when(roleServices.update(any(Role.class))).thenAnswer(a -> {
-            throw new RoleBadArgException(errorMessage);
-        });
-
-        final MutableHttpRequest<Role> request = HttpRequest.PUT("", r)
-                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
-        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
-                client.toBlocking().exchange(request, Map.class));
-
-        JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
-        JsonNode errors = Objects.requireNonNull(body).get("message");
-        JsonNode href = Objects.requireNonNull(body).get("_links").get("self").get("href");
-        assertEquals(errorMessage, errors.asText());
-        assertEquals(request.getPath(), href.asText());
-        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
-
-        verify(roleServices, times(1)).update(any(Role.class));
     }
 
     @Test
     void deleteRole() {
-        UUID uuid = UUID.randomUUID();
+        MemberProfile memberProfile = createADefaultMemberProfile();
+        Role role = createDefaultRole(memberProfile);
 
-        doAnswer(an -> {
-            assertEquals(uuid, an.getArgument(0));
-            return null;
-        }).when(roleServices).delete(any(UUID.class));
+        assertNotNull(findRole(role));
 
-        final MutableHttpRequest<Object> request = HttpRequest.DELETE(uuid.toString()).basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final MutableHttpRequest<Object> request = HttpRequest.DELETE(role.getId().toString())
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
         final HttpResponse<String> response = client.toBlocking().exchange(request, String.class);
 
         assertEquals(HttpStatus.OK, response.getStatus());
+        assertNull(findRole(role));
+    }
 
-        verify(roleServices, times(1)).delete(any(UUID.class));
+    @Test
+    void deleteRoleNonExisting() {
+        UUID uuid = UUID.randomUUID();
+
+        assertNull(findRoleById(uuid));
+
+        final MutableHttpRequest<Object> request = HttpRequest.DELETE(uuid.toString())
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        final HttpResponse<String> response = client.toBlocking().exchange(request, String.class);
+
+        assertEquals(HttpStatus.OK, response.getStatus());
+        assertNull(findRoleById(uuid));
+    }
+
+    @Test
+    void deleteRoleBadId() {
+        String uuid = "Bill-Nye-The-Science-Guy";
+
+        final MutableHttpRequest<Object> request = HttpRequest.DELETE(uuid)
+                .basicAuth(ADMIN_ROLE, ADMIN_ROLE);
+        HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class,
+                () -> client.toBlocking().exchange(request, Map.class));
+
+        JsonNode body = responseException.getResponse().getBody(JsonNode.class).orElse(null);
+        String errors = Objects.requireNonNull(body).get("message").asText();
+        String href = Objects.requireNonNull(body).get("_links").get("self").get("href").asText();
+        assertTrue(errors.contains(String.format("Failed to convert argument [id] for value [%s]", uuid)));
+        assertEquals(request.getPath(), href);
+        assertEquals(HttpStatus.BAD_REQUEST, responseException.getStatus());
     }
 
     @Test
     void deleteRoleUnauthorized() {
         UUID uuid = UUID.randomUUID();
-
-        doAnswer(an -> {
-            assertEquals(uuid, an.getArgument(0));
-            return null;
-        }).when(roleServices).delete(any(UUID.class));
 
         final HttpRequest<UUID> request = HttpRequest.DELETE(uuid.toString());
         HttpClientResponseException responseException = assertThrows(HttpClientResponseException.class, () ->
@@ -494,6 +497,5 @@ class RoleControllerTest {
 
         assertEquals(HttpStatus.UNAUTHORIZED, responseException.getStatus());
         assertEquals("Unauthorized", responseException.getMessage());
-        verify(roleServices, never()).delete(any(UUID.class));
     }
 }
